# solitude_labs-poc

./: .gitignore  Cargo.toml  DESIGN_DOC.md  README.md
guessing_game/src/: main.rs
mesh-gateway/: .gitignore  Cargo.toml  README.md
mesh-gateway/certs/: ca.crt  gateway-a.crt  gateway-b.crt  gateway-c.crt
mesh-gateway/configs/: gateway-a-linear.toml  gateway-a.toml  gateway-b-linear.toml  gateway-b.toml  gateway-c-linear.toml  gateway-c.toml
mesh-gateway/src/: certs.rs  client.rs  config.rs  lib.rs  main.rs  routing.rs  server.rs  types.rs
