[package]
name = "mesh_gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = "0.6"
axum-server = { version = "0.5", features = ["tls-rustls"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace"] }
hyper = { version = "0.14", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }

# TLS
rustls = "0.21"
rustls-pemfile = "1.0"
tokio-rustls = "0.24"

# Certificate generation
rcgen = { version = "0.11", features = ["x509-parser"] }
time = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"
